      If you can help, please get in touch.  Thanks!

Release x.x.x xxx xxxxxxxxx xx xxxx
        Bug fixes:
       #390 #395  Fix undefined behavior during parsing when compiled with
                    -DXML_UNICODE that was introduced with Expat 2.0.1

        Other changes:
            #396  Windows: Drop support for Visual Studio <=8.0/2005
       #383 #393  Autotools: Improve handling of user (C|CPP|CXX|LD)FLAGS,
                    e.g. ensure that they have the last word over flags added
                    while running ./configure
            #360  CMake: Create libexpatw.{dll,so} and expatw.pc (with emphasis
                    on suffix "w") with -DEXPAT_CHAR_TYPE=(ushort|wchar_t)
            #360  CMake: Detect and deny unsupported build combinations
                    involving -DEXPAT_CHAR_TYPE=(ushort|wchar_t)
            #360  CMake: Install pre-compiled shipped xmlwf.1 manpage in case
                    of -DEXPAT_BUILD_DOCS=OFF
       #375 #380  CMake: Fix use of Expat by means of add_subdirectory
                  CMake: Expose ${EXPAT_TARGET}(="libexpat"/"expatw"/"expat")
                    to parent scope for use by means of add_subdirectory
            #385  CMake: Fix compilation with -DEXPAT_SHARED_LIBS=OFF for
                    Windows
                  CMake: Expose man page compilation as target "xmlwf-manpage"
            #354  Fix testsuite for -DEXPAT_DTD=OFF and -DEXPAT_NS=OFF, each
  #354 #355 #356  Address compiler warnings

        Special thanks to:
            asavah
            Jeffrey Walton
            Ma Lin
            Maciej Sroczyński
            Mohammed Khajapasha
            Vadim Zeitlin

Release 2.2.9 Wed September 25 2019
        Other changes:
                  examples: Drop executable bits from elements.c
            #349  Windows: Change the name of the Windows DLLs from expat*.dll
                    to libexpat*.dll once more (regression from 2.2.8, first